xserver-xorg-video-intel (2:2.14.0-3) UNRELEASED; urgency=low

  * Switch to dh:
    - Use debhelper 8.
    - Use dh-autoreconf.
    - Bump xserver-xorg-dev build-dep for dh_xsf_substvars and xsf
      debhelper sequence.
    - Specify usr/share/man in .install, remove .manpages accordingly.
    - Specify NEWS and README in .docs file.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Feb 2011 07:43:53 +0100

xserver-xorg-video-intel (2:2.14.0-2) experimental; urgency=low

  * Cherry-pick from upstream to fix many rendering issues
    (https://bugs.freedesktop.org/show_bug.cgi?id=33650):
    - uxa: Undo damage translation before appending

 -- Cyril Brulebois <kibi@debian.org>  Fri, 04 Feb 2011 15:37:47 +0100

xserver-xorg-video-intel (2:2.14.0-1) experimental; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 08 Jan 2011 18:10:23 +0100

xserver-xorg-video-intel (2:2.13.903-1) experimental; urgency=low

  [ Robert Hooker ]
  * Add libudev-dev to the build deps for monitor hotplug detection
    events.

  [ Cyril Brulebois ]
  * New upstream release candidate.
  * Bump libdrm-dev build-dep.
  * Drop libdrm-from-sid-is-ok.diff accordingly.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 04 Jan 2011 15:43:17 +0100

xserver-xorg-video-intel (2:2.13.901-2) experimental; urgency=low

  * Build against Xserver 1.9.1 rc1.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 09 Nov 2010 15:53:43 +0100

xserver-xorg-video-intel (2:2.13.901-1) experimental; urgency=low

  * New upstream release candidate.
  * Bump build-dep on libdrm-dev: 2.4.22-2 contains some cherry-picked
    changes to allow this release candidate to build and run.
  * Drop patch: i8xx-shadow.diff

 -- Cyril Brulebois <kibi@debian.org>  Tue, 09 Nov 2010 14:54:21 +0100

xserver-xorg-video-intel (2:2.13.0-2) unstable; urgency=low

  [ Cyril Brulebois ]
  * Merge from experimental.
  * Lower build-dep on libdrm-dev from 2.4.22 to 2.4.21-1~squeeze3 since