@@ -7,6 +7,9 @@ xserver-xorg-video-intel (2:2.14.0-3) UNRELEASED; urgency=low
       debhelper sequence.
     - Specify usr/share/man in .install, remove .manpages accordingly.
     - Specify NEWS and README in .docs file.
+  * Get rid of maintainer scripts, since they were only used to handle
+    switching between versions with or without KMS. Starting with squeeze,
+    KMS is mandatory, so stop worrying about that.
 
  -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Feb 2011 07:43:53 +0100
 
